<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40px"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textSize="90px"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginLeft="130px"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="140px">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tiempo"
                android:onClick="tiempo"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datosat"
                android:onClick="datosAt"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mult"
                android:onClick="multi"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salir"
            android:layout_marginTop="350px"
            android:layout_marginLeft="200px"
            android:onClick="salir"/>
    </LinearLayout>
</LinearLayout>
